# notjen

./: Cargo.toml  README.md
lua/: pipeline.lua
lua/pipelines/: pipeline.lua  test-pipeline.lua
lua/plugins/: curl_plugin.lua  env_plugin.lua  git_plugin.lua  git_plugin_spec.lua  hook_plugin.lua  pnpm_plugin.lua  print_me_plugin.lua  pwd_plugin.lua  report_plugin.lua  stages_plugin.lua  state_plugin.lua  timer_plugin.lua  yaml_plugin.lua
src/: main.rs
templates/: dashboard.html
