[package]
name = "notjen"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.17", features = ["derive"] }
mlua = { version = "0.9.9", features = ["lua54"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tera = "1.20.0"
tokio = { version = "1.40.0", features = ["full"] }
